# spoticord

./: .gitignore  Cargo.toml  shuttle_setup_container.sh
spoticord_bot/: Cargo.toml
spoticord_bot/src/: main.rs
spoticord_bot/src/bot/: mod.rs
spoticord_bot/src/commands/music/: join.rs
spoticord_config/src/: env.rs  lib.rs
spoticord_database/: Cargo.toml
spoticord_database/migrations/: 20250909063437_create_tables.sql
spoticord_database/src/: error.rs  lib.rs  migrations.rs  schema.rs
spoticord_session/src/: lib.rs
typescript-version/: package.json
typescript-version/src/: bot.ts  main.ts
typescript-version/src/commands/core/: help.ts
typescript-version/src/commands/debug/: ping.ts
typescript-version/src/database/: Database.ts
typescript-version/src/session/: SessionManager.ts
typescript-version/src/utils/: logger.ts
