[workspace]
resolver = "2"
members = [
    "spoticord_bot",
    "spoticord_audio",
    "spoticord_config",
    "spoticord_database",
    "spoticord_player",
    "spoticord_session",
    "spoticord_utils",
    "spoticord_stats",
]

[workspace.package]
edition = "2021"
version = "2.2.6"
authors = ["izzy.eth"]
