[package]
name = "spoticord_database"
version.workspace = true
edition = "2021"

[dependencies]
spoticord_config = { path = "../spoticord_config" }

diesel = { version = "2.2.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.2.0" }
rspotify = { version = "0.13.3", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
chrono = "0.4.38"
thiserror = "2.0.3"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
r2d2 = "0.8"
